[project]
name = "Bili-Scraper"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.13.*"
license = { text = "MIT" }
authors = [
    {name = "DogeCN",email = "hark2009lbf@outlook.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["httpx>=0.27.0,<0.29.0", "rich>=15.0.0,<16.0"]

[project.scripts]
bilibili-scraper = "bilibili_scraper.__main__:main"


[tool.pdm]
distribution = false
